--- a/app/src/main/res/layout-hdpi/adapter_bookmark.xml
+++ b/app/src/main/res/layout-hdpi/adapter_bookmark.xml
@@ -64,7 +64,7 @@
                 android:layout_weight="1.00"
                 android:background="#fcfcfc"
                 android:paddingHorizontal="10dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                         android:orientation="horizontal"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="10dp"
-                        android:layout_marginTop="5dp">
+                        android:layout_marginTop="2dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -146,10 +146,9 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="38dp"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:layout_marginTop="3dp"
                     android:layout_marginBottom="5dp">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -168,6 +167,7 @@
                                 android:layout_height="23dp"
                                 android:fontFamily="@font/dubai_font"
                                 android:id="@+id/view"
+                                android:padding="1dp"
                                 android:src="@drawable/map_512"/>
                         </LinearLayout>
 
@@ -182,6 +182,7 @@
                                 android:layout_width="19dp"
                                 android:layout_height="23dp"
                                 android:fontFamily="@font/dubai_font"
+                                android:padding="1dp"
                                 android:src="@drawable/edit_512"/>
                         </LinearLayout>
                         <LinearLayout
@@ -196,7 +197,7 @@
                                 android:layout_height="23dp"
                                 android:src="@drawable/delete_512"
                                 android:fontFamily="@font/dubai_font"
-                                />
+                                android:padding="1dp"/>
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -209,7 +210,8 @@
                                 android:layout_width="19dp"
                                 android:layout_height="23dp"
                                 android:src="@drawable/makani_512"
-                                android:fontFamily="@font/dubai_font" />
+                                android:fontFamily="@font/dubai_font"
+                                android:padding="1dp"/>
                         </LinearLayout>
 
 
