--- a/app/src/main/res/layout-mdpi/adapter_bookmark.xml
+++ b/app/src/main/res/layout-mdpi/adapter_bookmark.xml
@@ -64,7 +64,7 @@
                 android:layout_weight="1.00"
                 android:background="#fcfcfc"
                 android:paddingHorizontal="10dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -96,7 +96,8 @@
                 android:layout_height="wrap_content"
                 android:weightSum="1"
                 android:orientation="vertical"
-                android:background="#fcfcfc">
+                android:background="#fcfcfc"
+                android:layout_marginTop="-1dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -108,8 +109,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center_vertical"
-                        android:paddingHorizontal="10dp"
-                        android:layout_marginTop="5dp">
+                        android:paddingHorizontal="10dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -146,10 +146,9 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="38dp"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:layout_marginTop="3dp"
                     android:layout_marginBottom="5dp">
                     <LinearLayout
                         android:layout_width="match_parent"
