--- a/app/src/main/res/layout-xhdpi/fragment_bookmark.xml
+++ b/app/src/main/res/layout-xhdpi/fragment_bookmark.xml
@@ -26,7 +26,8 @@
             <LinearLayout
                 android:id="@+id/fragment_map_layoutSearch"
                 android:layout_width="match_parent"
-                android:layout_height="74dp"
+                android:layout_marginTop="6dp"
+                android:layout_height="63dp"
                 android:orientation="horizontal"
                 android:layout_marginHorizontal="8dp">
 
@@ -43,7 +44,6 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="3dp"
                         android:layout_weight="0.82"
-
                         android:focusableInTouchMode="false"
                         android:fontFamily="@font/dubai_font"
                         android:gravity="start|center_vertical"
@@ -53,8 +53,7 @@
                         android:text="@string/findPlot"
                         android:textAlignment="viewStart"
                         android:textColor="#333333"
-                        android:textSize="14sp" />
-
+                        android:textSize="16sp" />
                     <AutoCompleteTextView
                         android:id="@+id/fragment_bookmarks_plotnumber"
                         android:layout_width="match_parent"
@@ -62,22 +61,19 @@
                         android:layout_weight="0.735"
                         android:background="#00000000"
                         android:digits="0123456789"
-
                         android:ems="8"
                         android:fontFamily="@font/dubai_font"
                         android:hint="_   _   _   _   _   _   _"
                         android:textColorHint="#333333"
                         android:inputType="number"
-
                         android:lineHeight="20dp"
                         android:maxLength="12"
                         android:paddingStart="5dp"
                         android:layout_gravity="bottom"
-
                         android:paddingEnd="5dp"
                         android:textAlignment="viewStart"
                         android:textDirection="ltr"
-                        android:textSize="14sp" />
+                        android:textSize="16sp" />
 
                     <LinearLayout
                         android:id="@+id/fragment_bookmarks_btnSearch"
@@ -85,14 +81,15 @@
                         android:layout_height="45dp"
                         android:layout_gravity="center"
                         android:layout_weight="1.08"
+                        android:gravity="center"
                         android:layout_marginEnd="5dp">
 
                         <ImageView
-
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
                             android:layout_marginEnd="5dp"
-                            android:padding="10dp"
+                            android:padding="2dp"
+                            android:layout_gravity="center"
                             android:src="@drawable/search_512" />
 
                     </LinearLayout>
@@ -108,12 +105,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="5dp"
+                        android:gravity="center_vertical"
                         android:layout_weight="1.12">
 
                         <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:padding="8dp"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:padding="2dp"
                             android:src="@drawable/map_menu_512" />
 
 
