--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -184,6 +184,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
+                android:layoutDirection="locale"
                 android:background="@color/white">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -209,6 +210,7 @@
                         android:layout_gravity="center"
                         android:layout_marginHorizontal="12dp"
                         android:layout_marginBottom="20dp"
+                        android:layoutDirection="locale"
                         android:background="@drawable/rounded_corner_settings_font_bg"
                         android:gravity="center"
                         android:weightSum="5">
@@ -307,6 +309,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
+                            android:layoutDirection="locale"
                             android:layout_weight="1">
                             <TextView
                                 android:layout_width="wrap_content"
