--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -28,13 +28,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:layout_marginHorizontal="18dp"
+
                     android:orientation="horizontal">
                     <ImageView
-                        android:layout_width="23dp"
+                        android:layout_width="22dp"
                         android:layout_height="25dp"
                         android:layout_gravity="center_vertical"
                         android:id="@+id/backButton"
+                        android:visibility="invisible"
                         android:src="@drawable/back"/>
                     <TextView
                         android:id="@+id/txtWelcome"
@@ -45,6 +46,7 @@
                         android:fontFamily="@font/dubai_font"
                         android:gravity="start|center_vertical"
                         android:text="@string/title_welcome"
+                        android:lineHeight="35dp"
                         android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:textFontWeight="1000"
@@ -58,7 +60,7 @@
                     android:id="@+id/profileUsername"
                     android:layout_marginTop="7dp"
                     android:layout_marginBottom="15dp"
-                    android:layout_marginStart="18dp"
+                    android:layout_marginStart="22dp"
                     android:gravity="center_vertical">
                     <ImageView
                         android:layout_width="44dp"
@@ -100,7 +102,7 @@
                     android:id="@+id/lstLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="18dp"
+                    android:layout_marginStart="22dp"
                     android:textSize="16sp"
                     android:text="@string/lastlogin"
                     android:layout_gravity="start|center_vertical"
