--- a/app/src/main/res/layout-xxhdpi/adapter_map_function_menu.xml
+++ b/app/src/main/res/layout-xxhdpi/adapter_map_function_menu.xml
@@ -29,11 +29,13 @@
             android:layout_margin="5dp">
             <ImageView
                 android:id="@+id/imgMenuIcon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="50dp"
+                android:maxHeight="50dp"
                 android:paddingTop="4dp"
                 android:src="@drawable/bookmark"
-                android:layout_weight="0.6"
+                android:layout_weight="0.8"
 
                 android:layout_marginVertical="2dp"/>
             <TextView
@@ -45,9 +47,9 @@
                 android:paddingBottom="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dubai_font"
-                android:maxLines="2"
-                android:layout_weight=".4"
-                android:lineHeight="12dp"
+                android:maxLines="3"
+                android:layout_weight=".2"
+                android:lineHeight="18dp"
                 android:textAlignment="center"
                 android:textColor="#2a3d68" />
         </LinearLayout>
