--- a/app/src/main/res/layout/fragment_land_ownership_selection.xml
+++ b/app/src/main/res/layout/fragment_land_ownership_selection.xml
@@ -31,7 +31,6 @@
             android:background="@drawable/attachment_spinner_bg"
             android:textColor="@color/black"
             android:textStyle="bold"
-            style="@style/font_medium_bold"
             android:visibility="visible"
              />
         <RadioGroup
@@ -45,12 +44,13 @@
             android:layout_marginTop="20dp"
             android:id="@+id/rg">
             <RadioButton
-                style="@style/font_medium_regular"
+                android:fontFamily="@font/dubai_font"
                 android:id="@+id/rb_isOwner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/maroon_light"
                 android:checked="false"
+                android:textSize="14sp"
                 android:textAlignment="viewStart"
                 android:text="@string/iamowner"
                 android:layout_marginBottom="30dp"
@@ -63,6 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="viewStart"
+                android:textSize="14sp"
+                android:fontFamily="@font/dubai_font"
                 android:layout_marginBottom="30dp"
                 android:buttonTint="@color/maroon_light"
                 android:text="@string/iamnotowner"
