--- a/app/src/main/res/layout/fragment_request_details.xml
+++ b/app/src/main/res/layout/fragment_request_details.xml
@@ -283,6 +283,8 @@
                 android:minWidth="100dp"
                 android:textSize="16sp"
                 android:layout_margin="16dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/payNow"
