--- a/app/src/main/res/layout-xhdpi/adapter_bookmark.xml
+++ b/app/src/main/res/layout-xhdpi/adapter_bookmark.xml
@@ -113,7 +113,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/area"
+                            android:text="@string/community"
                             android:textSize="13sp"
                             android:textAlignment="viewStart"
                             android:textColor="@color/favoritesTextColor"
@@ -126,6 +126,7 @@
                             android:textColor="@color/favoritesTextColor"
                             android:fontFamily="@font/dubai_font"
                             android:singleLine="true"
+                            android:id="@+id/community"
                             android:layout_marginStart="5dp"
                             android:text='@{adapterBookmarkVM.getCurrentBookmark(position).Area ??  ""}'
                             android:textAlignment="viewStart"
