--- a/app/src/main/res/layout-xhdpi/fragment_map.xml
+++ b/app/src/main/res/layout-xhdpi/fragment_map.xml
@@ -10,6 +10,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/mapRoot"
         android:orientation="vertical">
         <!--<com.esri.android.map.MapView
             android:id="@+id/mapView"
