--- a/app/src/main/res/layout-xxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_login.xml
@@ -213,7 +213,7 @@
                 android:id="@+id/loginContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:visibility="visible"
                 android:orientation="vertical">
                 <LinearLayout
@@ -253,7 +253,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
 
-                        android:layout_marginEnd="40dp"
+                        android:layout_marginEnd="24dp"
 
                         android:paddingEnd="8dp"
                         android:layout_marginTop="16dp"
@@ -342,10 +342,10 @@
                     android:layoutDirection="locale"
                     android:layout_marginTop="16dp"
 
-                    android:layout_marginEnd="40dp"
+                    android:layout_marginEnd="24dp"
                     android:hint="@string/password"
                     android:paddingEnd="8dp"
-
+                    android:textDirection="locale"
                     android:singleLine="true"
                     android:textStyle="bold"
                     android:textColorHint="#6D6D6D"
