--- a/app/src/main/res/layout-xxhdpi/adapter_bookmark.xml
+++ b/app/src/main/res/layout-xxhdpi/adapter_bookmark.xml
@@ -112,7 +112,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/area"
+                            android:text="@string/community"
                             android:textSize="14sp"
                             android:textAlignment="viewStart"
                             android:textColor="@color/favoritesTextColor"
@@ -125,6 +125,7 @@
                             android:textColor="@color/favoritesTextColor"
                             android:fontFamily="@font/dubai_font"
                             android:singleLine="true"
+                            android:id="@+id/community"
                             android:layout_marginStart="5dp"
                             android:text='@{adapterBookmarkVM.getCurrentBookmark(position).Area ??  ""}'
                             android:textAlignment="viewStart"
