--- a/app/src/main/res/layout-xxhdpi/fragment_mymap.xml
+++ b/app/src/main/res/layout-xxhdpi/fragment_mymap.xml
@@ -29,6 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="34dp"
                     android:layout_gravity="center"
+                    android:gravity="center_vertical"
                     android:textAlignment="center"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_corners_green_bg"
@@ -52,6 +53,7 @@
                         android:fontFamily="@font/dubai_font"
                         android:paddingEnd="5dp"
                         android:text="@string/search"
+                        android:gravity="center_vertical"
                         android:textAllCaps="false"
                         android:textColor="#fff"
                         android:textSize="16sp" />
@@ -61,6 +63,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="34dp"
                     android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
                     android:layout_marginStart="8dp"
                     android:background="@drawable/rounded_corners_bg"
                     android:orientation="horizontal">
@@ -79,6 +83,7 @@
                         android:layout_marginStart="8dp"
                         android:id="@+id/txtReset"
                         android:paddingEnd="8dp"
+                        android:gravity="center_vertical"
                         android:fontFamily="@font/dubai_font"
                         android:text="@string/reset"
                         android:textAllCaps="false"
