--- a/app/src/main/res/layout/attachment_drp_ar.xml
+++ b/app/src/main/res/layout/attachment_drp_ar.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
     android:layoutDirection="rtl">
     <TextView
         android:id="@+id/txtLandOwner"
@@ -11,10 +12,12 @@
         android:textDirection="locale"
         android:textAlignment="viewStart"
         android:layout_centerVertical="true"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="5dp"
+        android:gravity="start|center_vertical"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textFontWeight="1000"
         android:fontFamily="@font/dubai_font"
         android:textColor="@color/black" />
