--- a/app/src/main/res/layout/attachment_drp_en.xml
+++ b/app/src/main/res/layout/attachment_drp_en.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     android:layoutDirection="ltr">
     >
     <TextView
@@ -11,12 +12,15 @@
         android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
+
+        android:gravity="start|center_vertical"
         android:textDirection="locale"
         android:textAlignment="viewStart"
         android:textStyle="bold"
         android:textFontWeight="1000"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:fontFamily="@font/dubai_font"
         android:layout_toLeftOf="@+id/imgChevron"
         android:textColor="@color/black" />
