--- a/app/src/main/res/layout/attachment_drp_view.xml
+++ b/app/src/main/res/layout/attachment_drp_view.xml
@@ -4,18 +4,23 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:id="@+id/rl"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
     android:layoutDirection="ltr"
+    android:layout_gravity="center_vertical"
     android:orientation="horizontal">
     <TextView
         android:id="@+id/txtLandOwner"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:padding="2dp"
         android:layoutDirection="locale"
         android:textAlignment="viewStart"
         android:gravity="start|center_vertical"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textFontWeight="1000"
         android:textColor="@color/gray_text_color"
         android:fontFamily="@font/dubai_font"
