--- a/app/src/main/res/layout/fragment_contactus.xml
+++ b/app/src/main/res/layout/fragment_contactus.xml
@@ -146,8 +146,9 @@
                                 android:layout_marginEnd="16dp"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginRight="16dp"
+                                android:padding="2dp"
                                 android:contentDescription="@string/you_are_about_to_call"
-                                android:src="@drawable/phone_512" />
+                                android:src="@drawable/call_512" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
