--- a/app/src/main/res/layout/fragment_find_site_plan.xml
+++ b/app/src/main/res/layout/fragment_find_site_plan.xml
@@ -111,7 +111,7 @@
         android:text="@string/find_site_plan"
         android:fontFamily="@font/dubai_font"
         android:textColor="@color/white"
-        android:background="#13a09a"
+        android:background="@color/maroon_light"
         android:layout_gravity="center"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
