--- a/app/src/main/res/layout/progressbar_layout.xml
+++ b/app/src/main/res/layout/progressbar_layout.xml
@@ -21,6 +21,7 @@
             android:text="@string/loading"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="#333333"
             android:fontFamily="@font/dubai_regular"
             android:textAlignment="center"
             android:layout_gravity="center"/>
