--- a/app/src/main/res/layout/activity_delivery_deatails.xml
+++ b/app/src/main/res/layout/activity_delivery_deatails.xml
@@ -80,6 +80,8 @@
                     android:inputType="text"
                     android:maxLength="255"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:textAlignment="viewStart"
                     android:textColor="@color/gray_text_color"
                     android:textDirection="locale" />
@@ -109,6 +111,8 @@
                     android:gravity="start|center_vertical"
                     android:inputType="text"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textDirection="locale"
@@ -143,6 +147,8 @@
                     android:hint="@string/mobile_number_9715xxxxxxxx"
                     android:maxLength="12"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:background="@color/transparent"
                     android:textDirection="locale"
                     android:textColor="@color/gray_text_color"
@@ -177,6 +183,8 @@
                     android:gravity="start"
                     android:maxLength="10"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:inputType="number"
@@ -205,8 +213,11 @@
                     android:layout_height="38dp"
                     android:id="@+id/et_emirates"
 
+
                     android:gravity="start|center_vertical"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:layoutDirection="locale"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -239,6 +250,8 @@
                     android:gravity="start|center_vertical"
                     android:inputType="text"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -271,6 +284,8 @@
                     android:inputType="text"
                     android:paddingStart="5dp"
                     android:background="@color/transparent"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
                     android:textDirection="locale" />
@@ -305,6 +320,8 @@
                     android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:textAlignment="viewStart"
                     android:textDirection="locale" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -334,6 +351,8 @@
                     android:layout_height="35dp"
                     android:gravity="start|center_vertical"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -368,6 +387,8 @@
                     android:layout_height="35dp"
                     android:gravity="start|center_vertical"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:layout_gravity="start|center_vertical"
                     android:inputType="text"
                     android:singleLine="true"
                     android:background="@color/transparent"
