--- a/app/src/main/res/layout/attachment_drp_view_ar.xml
+++ b/app/src/main/res/layout/attachment_drp_view_ar.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
     android:id="@+id/rl"
     android:layoutDirection="rtl"
     android:orientation="horizontal">
@@ -10,9 +12,10 @@
         android:id="@+id/txtLandOwner"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
+        android:layout_alignParentEnd="true"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
+        android:layout_marginEnd="5dp"
         android:layoutDirection="rtl"
         android:padding="2dp"
         android:textAlignment="viewStart"
