--- a/app/src/main/res/layout/fragment_find_site_plan.xml
+++ b/app/src/main/res/layout/fragment_find_site_plan.xml
@@ -25,6 +25,8 @@
         android:hint="@string/enter_plot_number"
         android:textAlignment="center"
         android:layout_gravity="center"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:maxLength="19"
         android:textSize="16sp"
         android:textDirection="ltr"
@@ -58,6 +60,8 @@
             android:layout_height="44dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:background="@drawable/control_background"
             android:elevation="20dp"
             android:fontFamily="@font/dubai_font"
@@ -97,6 +101,8 @@
         android:layout_marginTop="10dp"
        android:background="@drawable/control_background"
         android:elevation="20dp"
+       android:paddingStart="8dp"
+       android:paddingEnd="8dp"
         android:layout_gravity="center"
         android:textSize="16sp"
         android:gravity="center"/>
