--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -56,6 +56,7 @@
                     android:textAlignment="viewStart"
                     android:singleLine="true"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
                     android:background="@drawable/edittext_feedback_background"
                     android:fontFamily="@font/dubai_font"
                     android:maxLength="255"
@@ -75,6 +76,7 @@
                     android:layout_height="35dp"
                     android:gravity="start"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
                     android:background="@drawable/edittext_feedback_background"
                     android:textDirection="locale"
                     android:singleLine="true"
@@ -98,6 +100,7 @@
                     android:inputType="phone"
                     android:maxLength="20"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
                     android:background="@drawable/edittext_feedback_background"
                     android:textDirection="locale"
                     android:textAlignment="viewStart"
@@ -122,6 +125,7 @@
                     android:inputType="text"
                     android:text="@string/kharetati_feedback"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
                     android:background="@drawable/edittext_feedback_background"
                     android:textAlignment="viewStart"
                     android:singleLine="true"
@@ -141,6 +145,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
                     android:background="@drawable/edittext_feedback_background"
                     android:fontFamily="@font/dubai_font"
                     android:inputType="textMultiLine"
