--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -120,6 +120,7 @@
                     android:layout_marginEnd="5dp"
                     android:gravity="start|center_vertical"
                     android:layoutDirection="locale"
+                    android:textDirection="locale"
                     android:textAlignment="viewStart"
                     android:fontFamily="@font/dubai_font"
                     android:textColor="@color/white" />
